test/TestPhases/typechecker/invalid/ReturnMismatch.blc
module

function calc() returns int64
    return true
end

activity main ()()
    let x = calc()
    await false
end
